--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "doctrine/annotations": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "dompdf/dompdf": "^3.0",
-        "easycorp/easyadmin-bundle": "^3.5",
+        "easycorp/easyadmin-bundle": "^3.5.0",
         "firebase/php-jwt": "^6.4",
         "friendsofsymfony/rest-bundle": "^3.5",
         "friendsofsymfony/user-bundle": "~2.0",
@@ -28,6 +28,7 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/property-access": "4.4.*",
         "symfony/property-info": "4.4.*",
+        "symfony/requirements-checker": "*",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
@@ -36,8 +37,7 @@
         "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "white-october/pagerfanta-bundle": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
@@ -77,7 +77,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
