--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "doctrine/annotations": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "dompdf/dompdf": "^3.0",
-        "easycorp/easyadmin-bundle": "^2.3",
+        "easycorp/easyadmin-bundle": "^3.5",
         "firebase/php-jwt": "^6.4",
         "friendsofsymfony/rest-bundle": "^3.5",
         "friendsofsymfony/user-bundle": "~2.0",
@@ -40,6 +40,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "deployer/deployer": "^6.0",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fzaninotto/faker": "^1.9",
         "symfony/maker-bundle": "^1.39",
