--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/property-access": "4.4.*",
         "symfony/property-info": "4.4.*",
-        "symfony/requirements-checker": "*",
+        "symfony/requirements-checker": "^2.0",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
@@ -37,7 +37,8 @@
         "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "white-october/pagerfanta-bundle": "^1.3"
     },
     "require-dev": {
         "deployer/deployer": "^6.0",
