--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     },
     "require-dev": {
         "deployer/deployer": "^6.0",
+        "deployer/dist": "^6.8",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fzaninotto/faker": "^1.9",
         "symfony/maker-bundle": "^1.39",
